--- a/he.lproj/LaunchScreen.strings
+++ b/he.lproj/LaunchScreen.strings
@@ -1,1 +1,6 @@
 
+/* Class = "UILabel"; text = "Numoholic"; ObjectID = "KuP-uS-biQ"; */
+"KuP-uS-biQ.text" = "Numoholic";
+
+/* Class = "UILabel"; text = "Get your head banged more than beer"; ObjectID = "hew-Cf-wGh"; */
+"hew-Cf-wGh.text" = "Gets your head banged more than beer";
