--- a/he.lproj/Localizable.strings
+++ b/he.lproj/Localizable.strings
@@ -9,5 +9,11 @@
 Level = "שלב";
 level = "שלב";
 coming_soon = "בקרוב";
-tutorial = "כל שעליך לעשות הוא ללחוץ על המספרים בסדר עולה, לפי מה שאתה זוכר.";
+tutorial = "לחץ על מספר המטרה (בדרך כלל המספרים בסדר עולה).";
 Target = "מטרה";
+ASC = "מטרות בסדר עולה";
+RAND = "מטרות אקראיות";
+DESC = "מטרות בסדר יורד";
+Ads_removal = "הסרת מודעות";
+Buy = "קנה";
+Cancel = "בטל";
