--- a/he.lproj/Localizable.strings
+++ b/he.lproj/Localizable.strings
@@ -17,3 +17,8 @@ DESC = "מטרות בסדר יורד";
 Ads_removal = "הסרת מודעות";
 Buy = "קנה";
 Cancel = "בטל";
+Remove_Ads = "הסר מודעות";
+Restore_Purchases = "שחזר קניות";
+Transaction_Failed = "הקניה נכשלה";
+Ok = "הבנתי";
+Loading = "טעינה";
