--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -17,3 +17,8 @@ DESC = "Descending Targets";
 Ads_removal = "Ads removal";
 Buy = "Buy";
 Cancel = "Cancel";
+Remove_Ads = "Remove Ads";
+Restore_Purchases = "Restore Purchases";
+Transaction_Failed = "Transaction Failed";
+Ok = "Ok";
+Loading = "Loading";
