--- a/he.lproj/Main.strings
+++ b/he.lproj/Main.strings
@@ -1,6 +1,6 @@
 
-/* Class = "UIButton"; normalTitle = "→"; ObjectID = "0H3-O3-jiy"; */
-"0H3-O3-jiy.normalTitle" = "→";
+/* Class = "UIButton"; normalTitle = "←"; ObjectID = "0H3-O3-jiy"; */
+"0H3-O3-jiy.normalTitle" = "←";
 
 /* Class = "UIButton"; normalTitle = "+"; ObjectID = "2Zh-Le-ovN"; */
 "2Zh-Le-ovN.normalTitle" = "+";
@@ -14,23 +14,29 @@
 /* Class = "UIButton"; normalTitle = "+"; ObjectID = "5Pr-y2-Mss"; */
 "5Pr-y2-Mss.normalTitle" = "+";
 
-/* Class = "UIButton"; normalTitle = "בחר שלב"; ObjectID = "5W5-qE-S0K"; */
+/* Class = "UIButton"; normalTitle = "Choose a level"; ObjectID = "5W5-qE-S0K"; */
 "5W5-qE-S0K.normalTitle" = "בחר שלב";
 
-/* Class = "UIButton"; normalTitle = "שחק"; ObjectID = "6G6-NB-3ka"; */
+/* Class = "UIButton"; normalTitle = "Play"; ObjectID = "6G6-NB-3ka"; */
 "6G6-NB-3ka.normalTitle" = "שחק";
 
-/* Class = "UIButton"; normalTitle = "→"; ObjectID = "6a2-Oj-jgk"; */
-"6a2-Oj-jgk.normalTitle" = "→";
+/* Class = "UIButton"; normalTitle = "←"; ObjectID = "6a2-Oj-jgk"; */
+"6a2-Oj-jgk.normalTitle" = "←";
 
 /* Class = "UIButton"; normalTitle = "-"; ObjectID = "BGM-hZ-OkU"; */
 "BGM-hZ-OkU.normalTitle" = "-";
 
-/* Class = "UILabel"; text = "צור שלב"; ObjectID = "BXD-Oh-foC"; */
+/* Class = "UIButton"; normalTitle = "Remove Ads"; ObjectID = "BL5-td-Ogt"; */
+"BL5-td-Ogt.normalTitle" = "הסר מודעות";
+
+/* Class = "UILabel"; text = "Generate level"; ObjectID = "BXD-Oh-foC"; */
 "BXD-Oh-foC.text" = "צור שלב";
 
-/* Class = "UITextField"; placeholder = "שעון"; ObjectID = "D6d-Sq-CYW"; */
+/* Class = "UITextField"; placeholder = "Timer"; ObjectID = "D6d-Sq-CYW"; */
 "D6d-Sq-CYW.placeholder" = "שעון";
+
+/* Class = "UITextField"; placeholder = "Switch four tiles"; ObjectID = "DY8-pV-akZ"; */
+"DY8-pV-akZ.placeholder" = "החלפת רביעייה";
 
 /* Class = "UIButton"; normalTitle = "2"; ObjectID = "HTd-ku-juK"; */
 "HTd-ku-juK.normalTitle" = "2";
@@ -38,22 +44,31 @@
 /* Class = "UIButton"; normalTitle = "1"; ObjectID = "NdC-zH-Ah5"; */
 "NdC-zH-Ah5.normalTitle" = "1";
 
-/* Class = "UILabel"; text = "בחר שלב"; ObjectID = "PHu-rd-ecd"; */
+/* Class = "UILabel"; text = "Choose a level"; ObjectID = "PHu-rd-ecd"; */
 "PHu-rd-ecd.text" = "בחר שלב";
 
-/* Class = "UIButton"; normalTitle = "→"; ObjectID = "QtI-Qs-tvJ"; */
-"QtI-Qs-tvJ.normalTitle" = "→";
+/* Class = "UIButton"; normalTitle = "+"; ObjectID = "QNK-50-omu"; */
+"QNK-50-omu.normalTitle" = "+";
 
-/* Class = "UIButton"; normalTitle = "שחק"; ObjectID = "Rtz-a2-ua7"; */
+/* Class = "UIButton"; normalTitle = "←"; ObjectID = "QtI-Qs-tvJ"; */
+"QtI-Qs-tvJ.normalTitle" = "←";
+
+/* Class = "UISegmentedControl"; RQ1-zE-VYY.segmentTitles[0] = "Ascending"; ObjectID = "RQ1-zE-VYY"; */
+"RQ1-zE-VYY.segmentTitles[0]" = "סדר עולה";
+
+/* Class = "UISegmentedControl"; RQ1-zE-VYY.segmentTitles[1] = "Descending"; ObjectID = "RQ1-zE-VYY"; */
+"RQ1-zE-VYY.segmentTitles[1]" = "סדר יורד";
+
+/* Class = "UIButton"; normalTitle = "Play"; ObjectID = "Rtz-a2-ua7"; */
 "Rtz-a2-ua7.normalTitle" = "שחק";
 
-/* Class = "UIButton"; normalTitle = "→"; ObjectID = "SGF-Mx-Hb3"; */
-"SGF-Mx-Hb3.normalTitle" = "→";
+/* Class = "UIButton"; normalTitle = "←"; ObjectID = "SGF-Mx-Hb3"; */
+"SGF-Mx-Hb3.normalTitle" = "←";
 
 /* Class = "UIButton"; normalTitle = "-"; ObjectID = "SvT-JS-ioR"; */
 "SvT-JS-ioR.normalTitle" = "-";
 
-/* Class = "UILabel"; text = "איך משחקים"; ObjectID = "UHf-oI-dYI"; */
+/* Class = "UILabel"; text = "How to play"; ObjectID = "UHf-oI-dYI"; */
 "UHf-oI-dYI.text" = "איך משחקים";
 
 /* Class = "UIButton"; normalTitle = "-"; ObjectID = "VUi-WM-kSJ"; */
@@ -65,53 +80,59 @@
 /* Class = "UIButton"; normalTitle = "+"; ObjectID = "akb-jW-6BR"; */
 "akb-jW-6BR.normalTitle" = "+";
 
-/* Class = "UIButton"; normalTitle = "→"; ObjectID = "dgd-60-UuW"; */
-"dgd-60-UuW.normalTitle" = "→";
+/* Class = "UIButton"; normalTitle = "-"; ObjectID = "b76-6f-Msm"; */
+"b76-6f-Msm.normalTitle" = "-";
 
-/* Class = "UIButton"; normalTitle = "צור שלב"; ObjectID = "euC-hq-fP8"; */
+/* Class = "UIButton"; normalTitle = "+"; ObjectID = "cxq-e8-3Uq"; */
+"cxq-e8-3Uq.normalTitle" = "+";
+
+/* Class = "UIButton"; normalTitle = "←"; ObjectID = "dgd-60-UuW"; */
+"dgd-60-UuW.normalTitle" = "←";
+
+/* Class = "UIButton"; normalTitle = "Restore Purchases"; ObjectID = "dju-zN-E1A"; */
+"dju-zN-E1A.normalTitle" = "שחזר קניות";
+
+/* Class = "UIButton"; normalTitle = "Generate level"; ObjectID = "euC-hq-fP8"; */
 "euC-hq-fP8.normalTitle" = "צור שלב";
 
-/* Class = "UIButton"; normalTitle = "איך משחקים"; ObjectID = "i0C-4d-mqx"; */
+/* Class = "UIButton"; normalTitle = "How to play"; ObjectID = "i0C-4d-mqx"; */
 "i0C-4d-mqx.normalTitle" = "איך משחקים";
 
-/* Class = "UIButton"; normalTitle = "→"; ObjectID = "ijo-IN-65Y"; */
-"ijo-IN-65Y.normalTitle" = "→";
+/* Class = "UIButton"; normalTitle = "←"; ObjectID = "ijo-IN-65Y"; */
+"ijo-IN-65Y.normalTitle" = "←";
 
-/* Class = "UIButton"; normalTitle = "שלב 1"; ObjectID = "ioq-J2-3Nt"; */
+/* Class = "UIButton"; normalTitle = "Level 1"; ObjectID = "ioq-J2-3Nt"; */
 "ioq-J2-3Nt.normalTitle" = "שלב 1";
 
 /* Class = "UIButton"; normalTitle = "+"; ObjectID = "jLw-Ug-AfK"; */
 "jLw-Ug-AfK.normalTitle" = "+";
 
-/* Class = "UILabel"; text = "שלב"; ObjectID = "kfo-uk-i62"; */
+/* Class = "UILabel"; text = "Level"; ObjectID = "kfo-uk-i62"; */
 "kfo-uk-i62.text" = "שלב";
 
-/* Class = "UITextField"; placeholder = "ציר Y"; ObjectID = "lmz-2n-xWX"; */
+/* Class = "UITextField"; placeholder = "Y Grid"; ObjectID = "lmz-2n-xWX"; */
 "lmz-2n-xWX.placeholder" = "ציר Y";
 
-/* Class = "UIButton"; normalTitle = "הגדרות"; ObjectID = "msy-4R-ycF"; */
+/* Class = "UIButton"; normalTitle = "Settings"; ObjectID = "msy-4R-ycF"; */
 "msy-4R-ycF.normalTitle" = "הגדרות";
 
-/* Class = "UITextField"; placeholder = "החלפות"; ObjectID = "oIh-4B-JfC"; */
-"oIh-4B-JfC.placeholder" = "החלפות";
+/* Class = "UITextField"; placeholder = "Switch two tiles"; ObjectID = "oIh-4B-JfC"; */
+"oIh-4B-JfC.placeholder" = "החלפת זוג";
 
-/* Class = "UIButton"; normalTitle = "אפס שלבים"; ObjectID = "ooE-x9-IRR"; */
+/* Class = "UIButton"; normalTitle = "Reset levels"; ObjectID = "ooE-x9-IRR"; */
 "ooE-x9-IRR.normalTitle" = "אפס שלבים";
 
-/* Class = "UITextField"; placeholder = "ציר X"; ObjectID = "viw-WF-X5z"; */
+/* Class = "UITextField"; placeholder = "Switch three tiles"; ObjectID = "r74-K4-pTM"; */
+"r74-K4-pTM.placeholder" = "החלפת שלשה";
+
+/* Class = "UITextField"; placeholder = "X Grid"; ObjectID = "viw-WF-X5z"; */
 "viw-WF-X5z.placeholder" = "ציר X";
 
-/* Class = "UILabel"; text = "הגדרות"; ObjectID = "yFX-Fl-8Fn"; */
+/* Class = "UIButton"; normalTitle = "-"; ObjectID = "w7K-P5-7Cj"; */
+"w7K-P5-7Cj.normalTitle" = "-";
+
+/* Class = "UILabel"; text = "Settings"; ObjectID = "yFX-Fl-8Fn"; */
 "yFX-Fl-8Fn.text" = "הגדרות";
 
 /* Class = "UIButton"; normalTitle = "4"; ObjectID = "zE4-Ak-yCq"; */
 "zE4-Ak-yCq.normalTitle" = "4";
-
-/* Class = "UIButton"; normalTitle = "Remove Ads"; ObjectID = "BL5-td-Ogt"; */
-"BL5-td-Ogt.normalTitle" = "הסרת מודעות";
-
-/* Class = "UISegmentedControl"; RQ1-zE-VYY.segmentTitles[0] = "Ascending"; ObjectID = "RQ1-zE-VYY"; */
-"RQ1-zE-VYY.segmentTitles[0]" = "סדר עולה";
-
-/* Class = "UISegmentedControl"; RQ1-zE-VYY.segmentTitles[1] = "Descending"; ObjectID = "RQ1-zE-VYY"; */
-"RQ1-zE-VYY.segmentTitles[1]" = "סדר יורד";
