--- a/iOS/he.lproj/Localizable.strings
+++ b/iOS/he.lproj/Localizable.strings
@@ -22,3 +22,5 @@ Restore_Purchases = "שחזר קניות";
 Transaction_Failed = "הקניה נכשלה";
 Ok = "הבנתי";
 Loading = "טעינה";
+Turn_Music_Off = "הפסק מוזיקה";
+Turn_Music_On = "הפעל מוזיקה";
